--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>Page de login</title>
+    <title>Page d'accueil</title>
 </head>
 <body>
 <header>
 <nav>
     <ul>
-        <li><a href="#" class="blog"><img src="logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
+        <li><a href="#" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
 </nav>
