--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +7,22 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<!--footer-->
-<nav class="navbar bg-body-tertiary">
-    <div class="container">
-      <a class="navbar-brand">
-        <img src="images/logo.png"  class="logo" alt="Icon" width="90" height="84">
-      </a>
-    </div>
-</nav>
+
+<header>
+  <nav>
+    <ul>
+      <li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
     <div class="mb-3 row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
           <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
         </div>
-      </div>
+    </div>
       <div class="mb-3 row">
         <label for="inputPassword" class="col-sm-2 col-form-label">Mot de passe</label>
         <div class="col-sm-10">
@@ -28,16 +30,18 @@
         <div class="col-auto">
           <button type="submit" class="btn btn-primary mb-3">Me connecter</button>
         </div>
-        </div>
       </div>
-      <footer class="navbar bg-body-tertiary">
+    </div>
+</main>
+
+<footer class="navbar bg-body-tertiary">
         <div class="container">
           <a class="navbar-brand">
             <img src="images/logo.png"  class="logo" alt="Icon" width="90" height="84">
           </a>
           <span class="text-muted">© 2021 Company, Inc</span>
         </div>
-        </footer>
-      </div>
+</footer>
+
 </body>
 </html>
