--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,37 +11,36 @@
 <header>
   <nav>
     <ul>
-      <li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
+        <li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
     </ul>
-  </nav>
+</nav>
 </header>
 
 <main>
+  <div class="login-box">
+    <form id="loginForm" action="index.html" method="GET">
     <div class="mb-3 row">
-        <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+        <label for="Email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+          <input type="text" placeholder="email@example.com">
         </div>
     </div>
       <div class="mb-3 row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Mot de passe</label>
+        <label for="Password" class="col-sm-2 col-form-label">Mot de passe</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword">
+          <input type="password" class="form-control" id="Password">
         <div class="col-auto">
           <button type="submit" class="btn btn-primary mb-3">Me connecter</button>
         </div>
       </div>
     </div>
+    </form>
+    </div>
 </main>
 
-<footer class="navbar bg-body-tertiary">
-        <div class="container">
-          <a class="navbar-brand">
-            <img src="images/logo.png"  class="logo" alt="Icon" width="90" height="84">
-          </a>
-          <span class="text-muted">© 2021 Company, Inc</span>
-        </div>
+<footer>
+  <a class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a>
+  <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
 </footer>
-
 </body>
 </html>
