--- a/index.html
+++ b/index.html
@@ -15,5 +15,49 @@
     </ul>
 </nav>
 </header>
+
+<main>
+    <h1>Mes Articles</h1>
+    <article>
+        <div>
+        <h2>Taj Mahal</h2>
+        <p>blzblablbalbalbalablablbalbalablablablablablablbalabkabalbaygbjnugvoc ^xsdurt^yumjik</p>
+        </div>
+        <img src="images/TajMahal.jpg" alt="Voyage au Taj Mahal">
+    </article>
+    <article>
+        <div>
+        <h2>Avec les chats d'Amazonie</h2>
+        <p>blzblablbalbalbalablablbalbalablablablablablablbalabkabalbaygbjnugvoc ^xsdurt^yumjik</p>
+        </div>
+        <img src="images/amazonie.jpg" alt="Voyage sur des chats en Amazonie">
+    </article>
+    <article>
+        <div>
+        <h2>Dans les montagnes péruviennes</h2>
+        <p>blzblablbalbalbalablablbalbalablablablablablablbalabkabalbaygbjnugvoc ^xsdurt^yumjik</p>
+        </div>
+        <img src="images/Perou.jpg" alt="Voyage dans les montagnes péruviennes">
+    </article>
+    <article>
+        <div>
+        <h2>Devant le Chichen Itza</h2>
+        <p>blzblablbalbalbalablablbalbalablablablablablablbalabkabalbaygbjnugvoc ^xsdurt^yumjik</p>
+        </div>
+        <img src="images/ChichenItza.jpg" alt="Voyage au Chichen Itza">
+    </article>
+    <article>
+        <div>
+        <h2>Mort terrible</h2>
+        <p>blzblablbalbalbalablablbalbalablablablablablablbalabkabalbaygbjnugvoc ^xsdurt^yumjik</p>
+        </div>
+        <img src="images/mort.jpg" alt="Mort dans l'océan">
+    </article>
+</main>
+
+<footer>
+
+</footer>
+
 </body>
 </html>
