--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
   <div class="login-box">
     <form id="loginForm" action="index.html" method="GET">
     <div class="mb-3 row">
-        <label for="Email" class="col-sm-2 col-form-label">Email</label>
+        <label class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
           <input type="text" placeholder="email@example.com">
         </div>
