--- a/login.html
+++ b/login.html
@@ -39,8 +39,10 @@
 </main>
 
 <footer>
+  <nav>
   <a class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a>
   <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
+  </nav>
 </footer>
 </body>
 </html>
