--- a/article.html
+++ b/article.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,41 +17,48 @@
 </header>
 
 <main>
-    <h1>Mort Terrible</h1>
-    <p>Attack feet behind the couch destroy couch flop over give attitude hide when guests come over hopped up on goofballs hunt anything that moves bag stretch intently stare at the same spot, chew ipad power cord  why must they do that  inspect anything brought into the house  intently sniff hand   intrigued by the shower  claw drapes. Why must they do that intently stare at the same spot attack feet hopped up on goofballs hide when guests come over  intently sniff hand  make muffins  intrigued by the shower, chase mice give attitude  claw drapes sweet beast under the bed  chew ipad power cord  inspect anything brought into the house behind the couch, hunt anything that moves destroy couch shake treat  bag stretch flop over need to chase tail.</p>
-    
+    <article class="article">
+        <h1>Mort Terrible</h1>
+        <p>Monsieur Patate et sa femme décident un jour de réaliser leur rêve de traverser l'océan Atlantique pour rejoindre l'Europe. Ils préparent leur petit voilier avec enthousiasme, remplissant leur cœur d'émotion à l'idée de cette aventure extraordinaire. Le jour du départ arrive enfin. Sous un ciel bleu azur, ils lèvent les voiles et s'éloignent lentement des côtes américaines. Ils naviguent avec courage à travers les flots tumultueux, affrontant les tempêtes et les vents contraires.</p>
+        <p>Pendant des jours, ils sillonnent l'océan, vivant au rythme des vagues et des étoiles. Mais alors qu'ils approchent des côtes européennes, une violente tempête éclate soudainement. Les vagues déferlent sur leur fragile embarcation, la secouant violemment. Malgré tous leurs efforts pour garder le cap, le voilier est finalement submergé par une énorme vague. Monsieur Patate et sa femme se retrouvent alors ballottés par les flots déchaînés, se tenant fermement l'un à l'autre pour ne pas se perdre dans les profondeurs sombres de l'océan.</p>
+        <p>Dans un ultime élan de courage et d'amour, ils se soutiennent mutuellement jusqu'au bout, se réconfortant dans l'adversité. Alors que leurs forces commencent à faiblir, ils se regardent une dernière fois, leurs yeux se remplissant de gratitude pour les merveilleux moments partagés ensemble. Et dans le silence infini de l'océan Atlantique, leurs âmes s'envolent paisiblement vers l'horizon, emportées par le vent, unies pour l'éternité dans leur amour indéfectible.</p>
+
     <table>
         <caption style="caption-side:bottom">Tableau des participants</caption>
         <tr>
-        <th>Nom</th>
-        <th>Prénom</th>
-        <th>Âge</th>
+            <th>Nom</th>
+            <th>Prénom</th>
+            <th>Âge</th>
         </tr>
         <tr>
-        <td>Rossi</td>
-        <td>Laure</td>
-        <td>43 ans</td>
+            <td>Rossi</td>
+            <td>Laure</td>
+            <td>43 ans</td>
         </tr>
         <tr>
-        <td>Guyon</td>
-        <td>Augustin</td>
-        <td>19 ans</td>
+            <td>Guyon</td>
+            <td>Augustin</td>
+            <td>19 ans</td>
         </tr>
         <tr>
-        <td>Guyon</td>
-        <td>Augustin</td>
-        <td>19 ans</td>
+            <td>Guyon</td>
+            <td>Augustin</td>
+            <td>19 ans</td>
         </tr>
         <tr>
-        <td>Guyon</td>
-        <td>Augustin</td>
-        <td>19 ans</td>
+            <td>Guyon</td>
+            <td>Augustin</td>
+            <td>19 ans</td>
         </tr>
         </table>
+    </article>
 </main>
 
 <footer>
-
+    <nav>
+        <ul><li><a class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
+        <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
+    </nav>
 </footer>
 
 </body>
