--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,27 +22,28 @@
     <div class="mb-3 row">
         <label class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="text" placeholder="email@example.com">
+          <input type="text" placeholder="email@example.com" autofocus>
         </div>
     </div>
       <div class="mb-3 row">
         <label for="Password" class="col-sm-2 col-form-label">Mot de passe</label>
         <div class="col-sm-10">
           <input type="password" class="form-control" id="Password">
-        <div class="col-auto">
-          <button type="submit" class="btn btn-primary mb-3">Me connecter</button>
+          <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-3">Me connecter</button>
+          </div>
         </div>
       </div>
-    </div>
     </form>
-    </div>
+  </div>
 </main>
 
 <footer>
   <nav>
-  <a class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a>
-  <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
+    <ul><li><a class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
+    <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
   </nav>
 </footer>
+
 </body>
 </html>
