add comment in index page and redirection to article page

--- a/article.html
+++ b/article.html
@@ -52,6 +52,14 @@
         </tr>
         </table>
     </article>
+
+    <aside id="comment">
+        <!--commentaires-->
+        <article>
+        <!--1 comment-->
+            <p>test</p>
+        </article>
+    </aside>
 </main>
 
 <footer>
