comment check, tableau check

--- a/article.html
+++ b/article.html
@@ -24,40 +24,52 @@
         <p>Dans un ultime élan de courage et d'amour, ils se soutiennent mutuellement jusqu'au bout, se réconfortant dans l'adversité. Alors que leurs forces commencent à faiblir, ils se regardent une dernière fois, leurs yeux se remplissant de gratitude pour les merveilleux moments partagés ensemble. Et dans le silence infini de l'océan Atlantique, leurs âmes s'envolent paisiblement vers l'horizon, emportées par le vent, unies pour l'éternité dans leur amour indéfectible.</p>
 
     <table>
-        <caption style="caption-side:bottom">Tableau des participants</caption>
+        <caption style="caption-side:bottom">Statistiques de mortalité des légumes dans l'océan Atlantique</caption>
         <tr>
-            <th>Nom</th>
-            <th>Prénom</th>
-            <th>Âge</th>
+            <th>Légume</th>
+            <th>Nombre d'incidents mortels</th>
+            <th>Cause principale de mortalité</th>
         </tr>
         <tr>
-            <td>Rossi</td>
-            <td>Laure</td>
-            <td>43 ans</td>
+            <td>Carotte</td>
+            <td>15</td>
+            <td>Naufrage de bateaux</td>
         </tr>
         <tr>
-            <td>Guyon</td>
-            <td>Augustin</td>
-            <td>19 ans</td>
+            <td>Brocolis</td>
+            <td>10</td>
+            <td>Prédation de poissons</td>
         </tr>
         <tr>
-            <td>Guyon</td>
-            <td>Augustin</td>
-            <td>19 ans</td>
+            <td>Patate</td>
+            <td>8</td>
+            <td>Pollution chimique</td>
         </tr>
         <tr>
-            <td>Guyon</td>
-            <td>Augustin</td>
-            <td>19 ans</td>
+            <td>Courgette</td>
+            <td>20</td>
+            <td>Engluement par des débris</td>
         </tr>
         </table>
     </article>
 
     <aside id="comment">
+        <h2>Commentaires</h2>
         <!--commentaires-->
         <article>
         <!--1 comment-->
-            <p>test</p>
+            <h3>@superCourgette52</h3>
+            <p>Oh non ! mais quelle idée de prendre le bâteau ! </p>
+        </article>
+        <article>
+        <!--1 comment-->
+            <h3>@fan2patate</h3>
+            <p>Je ne peux plus vivre si tu n'es plus de ce monde (づة‎ ̭ة‎ )づ</p>
+        </article>
+        <article>
+        <!--1 comment-->
+            <h3>@carottesontqu8</h3>
+            <p>J'adore ton voyage! quand est ce que tu en fais un autre? c'est vraiment super bien raconté et super drôle !</p>
         </article>
     </aside>
 </main>
