--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
 <nav>
     <ul>
-        <li><a href="#" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
+        <li><a href="#" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
 </nav>
@@ -25,7 +25,7 @@
             <p>Après un long périple à travers les rues animées de Delhi et les paysages spectaculaires de l'Inde, Monsieur Patate arriva enfin à Agra, la ville où se trouve le majestueux Taj Mahal. Émerveillé par la vue des dômes blancs se dressant majestueusement contre le ciel bleu, il se sentit rempli d'une excitation palpable. Il se lança alors dans une exploration approfondie de ce monument emblématique. Il passa des heures à admirer la beauté des intrications des motifs en marbre incrustés de pierres précieuses, à contempler la symétrie parfaite de l'architecture et à se perdre dans l'histoire d'amour qui se cache derrière ce chef-d'œuvre...<a href="article.html">Voir plus</a></p>
             <a href="article.html#comment">3 Commentaires</a>
         </div>
-        <img src="images/TajMahal.jpg" alt="Voyage au Taj Mahal">
+        <img src="images/TajMahal.jpg" alt="Photo de monsieur patate et de sa femme devant le Taj Mahal en Inde">
     </article>
     <article>
         <div>
@@ -33,7 +33,7 @@
             <p>Arborant son chapeau d'explorateur et son sac à dos rempli de provisions, Monsieur Patate s'enfonça dans la dense végétation amazonienne, guidé par le murmure des rivières et le chant des oiseaux exotiques. Au fil de son périple, il rencontra des communautés autochtones qui partagèrent avec lui leurs connaissances ancestrales sur la faune et la flore de la région. Ils lui racontèrent l'histoire des chats domestiques introduits par les colons européens et leur impact sur les petits mammifères et les oiseaux indigènes. Guidé par sa curiosité et son sens de la préservation de la nature, Monsieur Patate se mit à observer attentivement les interactions...<a href="article.html">Voir plus</a></p>
             <a href="article.html#comment">1 Commentaires</a>
         </div>
-        <img src="images/amazonie.jpg" alt="Voyage sur des chats en Amazonie">
+        <img src="images/amazonie.jpg" alt="Photo de monsieur patate et sa femme sur un chats d'Amazonie">
     </article>
     <article>
         <div>
@@ -41,7 +41,7 @@
             <p>Monsieur Patate, toujours en quête de nouvelles aventures, entreprit un voyage dans les majestueuses montagnes péruviennes, fasciné par leur beauté et leur mystère. Arpentant les sentiers sinueux à flanc de montagne, Monsieur Patate fut émerveillé par les sommets enneigés qui s'élevaient majestueusement vers le ciel. Il traversa des vallées verdoyantes parsemées de lamas paisibles et de troupeaux de moutons, s'imprégnant de la sérénité de ces paysages grandioses.Au cours de son périple, il fit la rencontre de communautés indigènes qui lui ouvrirent leurs portes et partagèrent avec lui leur culture millénaire...<a href="article.html">Voir plus</a></p>
             <a href="article.html#comment">5 Commentaires</a>
         </div>
-        <img src="images/Perou.jpg" alt="Voyage dans les montagnes péruviennes">
+        <img src="images/Perou.jpg" alt="Photo de monsieur patate et sa femme sur une chèvre surplombant les montagnes péruviennes">
     </article>
     <article>
         <div>
@@ -49,7 +49,7 @@
             <p>Monsieur Patate, toujours assoiffé de découvertes, décida de s'aventurer au cœur de la péninsule du Yucatán, au Mexique, pour explorer l'ancienne cité maya de Chichen Itza. Guidé par la passion de l'histoire et de l'archéologie, il pénétra dans ce site fascinant, émerveillé par l'ingéniosité et la grandeur de cette civilisation ancienne. Il déambula parmi les vestiges majestueux : la pyramide de Kukulcán, le temple des guerriers, le jeu de balle, et bien d'autres encore. Au fur et à mesure qu'il explorait les ruines, Monsieur Patate se plongea dans le passé glorieux de la civilisation maya...<a href="article.html">Voir plus</a></p>
             <a href="article.html#comment">2 Commentaires</a>
         </div>
-        <img src="images/ChichenItza.jpg" alt="Voyage au Chichen Itza">
+        <img src="images/ChichenItza.jpg" alt="Photo de monsieur patate et sa femme devant le Chichen Itza au Mexique">
     </article>
     <article>
         <div>
@@ -57,14 +57,14 @@
             <p>Monsieur Patate et sa femme décident un jour de réaliser leur rêve de traverser l'océan Atlantique pour rejoindre l'Europe. Ils préparent leur petit voilier avec enthousiasme, remplissant leur cœur d'émotion à l'idée de cette aventure extraordinaire. Le jour du départ arrive enfin. Sous un ciel bleu azur, ils lèvent les voiles et s'éloignent lentement des côtes américaines. Ils naviguent avec courage à travers les flots tumultueux, affrontant les tempêtes et les vents contraires. Pendant des jours, ils sillonnent l'océan, vivant au rythme des vagues et des étoiles...<a href="article.html">Voir plus</a></p>
             <a href="article.html#comment">4 Commentaires</a>
         </div>
-        <img src="images/mort.jpg" alt="Mort dans l'océan">
+        <img src="images/mort.jpg" alt="Image de monsieur patate et de sa femme criant 'à l'aide !' en train de se noyer dans l'océan atlantique ">
     </article>
     </section>
 </main>
 
 <footer>
     <nav>
-        <ul><li><a class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
+        <ul><li><a href="#" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
         <p>© 2024 Lucille CENAC, Mélanie MARMANDE, Inc</p>
     </nav>
 </footer>
