--- a/article.html
+++ b/article.html
@@ -10,7 +10,7 @@
 <header>
 <nav>
     <ul>
-        <li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
+        <li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
 </nav>
@@ -76,7 +76,7 @@
 
 <footer>
     <nav>
-        <ul><li><a class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
+        <ul><li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
         <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
     </nav>
 </footer>
