--- a/article.html
+++ b/article.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>Page d'accueil</title>
+    <title>Page Article - Les Aventures de Monsieur Patate</title>
 </head>
 <body>
 <header>
@@ -75,10 +75,8 @@
 </main>
 
 <footer>
-    <nav>
-        <ul><li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
-        <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
-    </nav>
+    <a href="#" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a>
+    <p>© 2024 Lucille CENAC, Mélanie MARMANDE, Inc</p>
 </footer>
 
 </body>
