--- a/login.html
+++ b/login.html
@@ -3,32 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page de login</title>
+  <title>Page de login - Les Aventures de Monsieur Patate</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <header>
-  <nav>
-    <ul>
-      <li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
-    </ul>
-</nav>
+  <a href="index.html" class="blog">
+    <img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">
+    <p>Les Aventures de Monsieur Patate</p>
+  </a>
 </header>
 
 <main>
   <div class="login-box">
-    <form id="loginForm" action="index.html" method="GET">
+    <form id="loginForm" action="index.html" method="POST">
     <div class="mb-3 row">
-        <label class="col-sm-2 col-form-label">Email</label>
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="text" placeholder="email@example.com" autofocus>
+          <input type="email" id="email" name="email" placeholder="email@example.com" autofocus autocomplete="username" required>
         </div>
     </div>
       <div class="mb-3 row">
-        <label for="Password" class="col-sm-2 col-form-label">Mot de passe</label>
+        <label for="password" class="col-sm-2 col-form-label">Mot de passe</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="Password">
+          <input type="password" class="form-control" id="password" autocomplete="current-password" required>
           <div class="col-auto">
             <button type="submit" class="btn btn-primary mb-3">Me connecter</button>
           </div>
@@ -39,10 +38,8 @@
 </main>
 
 <footer>
-  <nav>
-    <ul><li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a></li></ul>
-    <p>© 2024 Lucille CENAC,Mélanie MARMANDE, Inc</p>
-  </nav>
+  <a href="#" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a>
+  <p>© 2024 Lucille CENAC, Mélanie MARMANDE, Inc</p>
 </footer>
 
 </body>
