--- a/article.html
+++ b/article.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 <header>
-<nav>
-    <ul>
-        <li><a href="index.html" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a></li>
-        <li><a href="login.html">Login</a></li>
-    </ul>
-</nav>
+    <a href="index.html" class="blog">
+        <img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">
+        <p>Les Aventures de Monsieur Patate</p>
+    </a>
+    <nav>
+        <ul>
+            <li><a href="login.html">Login</a></li>
+        </ul>
+    </nav>
 </header>
 
 <main>
