--- a/login.html
+++ b/login.html
@@ -18,6 +18,7 @@
 <main>
   <div class="login-box">
     <form id="loginForm" action="index.html" method="POST">
+      <h1>Se Connecter</h1>
     <div class="mb-3 row">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
@@ -39,6 +40,15 @@
 
 <footer>
   <a href="#" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a>
+  <nav>
+    <ul>
+      <li><a href="">Mentions Légales</a></li>
+      <li><a href="">Conditions générales d'utilisations</a></li>
+      <li><a href="">A propos</a></li>
+    </ul>
+  </nav>
+  <p>05.62.18.31.15 - patate@purée.com - 15 Avenue de la Frite, 51000 PatateLand</p>
+  <p>Ecrit par Fils Patate</p>
   <p>© 2024 Lucille CENAC, Mélanie MARMANDE, Inc</p>
 </footer>
 
