--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css" />
+    <meta name="description" content="Liste d'articles sur les aventures de Monsieur Patate">
+    <link rel="stylesheet" href="index.css">
     <title>Page d'accueil - Les Aventures de Monsieur Patate</title>
 </head>
 <body>
@@ -72,7 +73,7 @@
 </main>
 
 <footer>
-    <a href="#" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a>
+    <a href="/index.html" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a>
     <nav>
         <ul>
             <li><a href="">Mentions Légales</a></li>
