--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Page de login">
   <title>Page de login - Les Aventures de Monsieur Patate</title>
   <link rel="stylesheet" href="index.css">
 </head>
@@ -39,7 +40,7 @@
 </main>
 
 <footer>
-  <a href="#" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a>
+  <a href="/index.html" class="blog"><img src="images/logo.png" alt="Logo de monsieur patate marchant avec son sac à dos, sont chapeau d'aventurier et ses lunettes de soleils" width="50" height="50">Les Aventures de Monsieur Patate</a>
   <nav>
     <ul>
       <li><a href="">Mentions Légales</a></li>
